B&L QA/objects/Physician_Visit__c.object
<CustomObject>
    <fields>
        <fullName>Service_No__c</fullName>
        <description>The Number Of Service Requirement.</description>
        <label>Service No.</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Session__c</fullName>
        <description>CHNSU field to capture the session of the physician visit</description>
        <label>Session</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>AM</fullName>
                </value>
                <value>
                    <fullName>PM</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Start_Time__c</fullName>
        <description>IndiaSU field to collect start time of the call</description>
        <label>Start Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <description>APAC SU field to identify the physician visit status.</description>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Open</fullName>
                    <default>true</default>
                    <label>Open</label>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Stock_Level_Akreos_AO__c</fullName>
        <description>APACSU will use this field to track the inventory level for all its products.</description>
        <label>Stock Level: Akreos AO</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Stock_Level_Akreos_Adapt__c</fullName>
        <description>APACSU will use this field to track the inventory level for all its products.</description>
        <label>Stock Level: Akreos Adapt</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Stock_Level_Akreos_MI_60__c</fullName>
        <description>APACSU will use this field to track the inventory level for all its products</description>
        <label>Stock Level: Akreos MI-60</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Stock_Level_Crystalens__c</fullName>
        <label>Stock Level: Crystalens</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Stock_Level_Envista__c</fullName>
        <label>Stock Level: Envista</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Stock_Level_LI61AO__c</fullName>
        <description>APACSU will use this field to track the inventory level for all its products.</description>
        <label>Stock Level: LI61AO</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Stock_Level_LI61SE__c</fullName>
        <description>APACSU will use this field to track the inventory level for all its products.</description>
        <label>Stock Level: LI61SE</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Support_Required_1__c</fullName>
        <description>IndiaSU field to collect Support required for key driver 1</description>
        <label>Support Required 1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Support_Required_2__c</fullName>
        <description>IndiaSU field to collect Support required for key driver 2</description>
        <label>Support Required 2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Support_Required_3__c</fullName>
        <description>IndiaSU field to collect Support required for key driver 3</description>
        <label>Support Required 3</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Targeted_Calls__c</fullName>
        <description>INDSU field to display value if call is planned and completed</description>
        <formula>If( ISPICKVAL(Status__c, &apos;Completed&apos;) &amp;&amp;  Planned_Call__c  =True,1,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Targeted Calls</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Tecnis_Acr_rate__c</fullName>
        <description>IndiaSU field to collect Competitor rate for Dr.</description>
        <label>Tecnis Acr rate</label>
        <precision>10</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Tecnis_Acrylic__c</fullName>
        <description>IndiaSU field to collect Competitor Implantation product detail (No of IOLs)</description>
        <label>Tecnis Acrylic</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Tecnis_Multifocal__c</fullName>
        <description>APACSU field to Collect number of Tecnis Multifocal</description>
        <label>Tecnis Multifocal</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Tecnis_Multifocal_rate__c</fullName>
        <description>APACSU field to Collect Tecnis Multifocal rate</description>
        <label>Tecnis Multifocal rate</label>
        <precision>10</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Tecnis__c</fullName>
        <description>APACSU field to Collect number of Tecnis used</description>
        <label>Tecnis</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Tecnis_rate__c</fullName>
        <description>APACSU field to Collect Tecnis rate</description>
        <label>Tecnis rate</label>
        <precision>10</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Time_Of_Approved__c</fullName>
        <label>Time Of Approved</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Time_Of_Submission__c</fullName>
        <label>Time Of Submission</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Time_Spent_In_OT__c</fullName>
        <description>INDSU field to capture time spent in OT</description>
        <formula>Value(Text( Hours_in_Surgery__c ))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Time Spent In OT</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Time_Spent__c</fullName>
        <description>India SU field to collect time spent by executive during physician visit</description>
        <label>Time Spent in Mns</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Times_in_Surgery__c</fullName>
        <label>Times in Surgery</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                </value>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
                <value>
                    <fullName>6</fullName>
                </value>
                <value>
                    <fullName>7</fullName>
                </value>
                <value>
                    <fullName>8</fullName>
                </value>
                <value>
                    <fullName>9</fullName>
                </value>
                <value>
                    <fullName>10</fullName>
                </value>
                <value>
                    <fullName>11</fullName>
                </value>
                <value>
                    <fullName>12</fullName>
                </value>
                <value>
                    <fullName>13</fullName>
                </value>
                <value>
                    <fullName>14</fullName>
                </value>
                <value>
                    <fullName>15</fullName>
                </value>
                <value>
                    <fullName>16</fullName>
                </value>
                <value>
                    <fullName>17</fullName>
                </value>
                <value>
                    <fullName>18</fullName>
                </value>
                <value>
                    <fullName>19</fullName>
                </value>
                <value>
                    <fullName>20</fullName>
                </value>
                <value>
                    <fullName>20+</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Visit_Call__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Sales Rep Visiting call</description>
        <label>Visit Call</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Visit_Date__c</fullName>
        <description>Created for KOREA SOLTA.</description>
        <label>Visit Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Visit_Type__c</fullName>
        <description>IndiaSU field to collect visit type</description>
        <label>Visit Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>AMC</fullName>
                </value>
                <value>
                    <fullName>CMC</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>PMV</fullName>
                </value>
                <value>
                    <fullName>Warranty</fullName>
                </value>
                <value>
                    <fullName>Product Training</fullName>
                </value>
                <value>
                    <fullName>Application Training</fullName>
                </value>
                <value>
                    <fullName>Counsellor Training</fullName>
                </value>
                <value>
                    <fullName>Paramedical Staff Training</fullName>
                </value>
                <value>
                    <fullName>Customer Training</fullName>
                </value>
                <value>
                    <fullName>Service Special Approval</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Visit_for_Accessories__c</fullName>
        <defaultValue>false</defaultValue>
        <description>IndiaSU field to collect whether the visit is for accessories supply</description>
        <label>Visit for Accessories</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Warranty_Visit_in_case_of_Machine_Failur__c</fullName>
        <defaultValue>false</defaultValue>
        <description>IndiaSU field to collect details of warranty incase of failure</description>
        <label>Warranty Visit in case of Machine Failur</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>With_Manager__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Created for KOREA SOLTA Users.</description>
        <label>With Manager</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>X1_8mm_AMO__c</fullName>
        <label>1.8mm - AMO</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>X1_8mm_Alcon__c</fullName>
        <label>1.8mm - Alcon</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>X1_8mm_B_L__c</fullName>
        <label>1.8mm - B&amp;L</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>X1_8mm_HumanOptics__c</fullName>
        <label>1.8mm - HumanOptics</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>X1_8mm_Others__c</fullName>
        <label>1.8mm - Others</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>X1_8mm_Zeiss__c</fullName>
        <label>1.8mm - Zeiss</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>X2_2mm_AMO__c</fullName>
        <label>2.2mm - AMO</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>X2_2mm_Alcon__c</fullName>
        <label>2.2mm - Alcon</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>X2_2mm_B_L__c</fullName>
        <label>2.2mm - B&amp;L</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>X2_2mm_HumanOptics__c</fullName>
        <label>2.2mm - HumanOptics</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>X2_2mm_Others__c</fullName>
        <label>2.2mm - Others</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>X2_2mm_Zeiss__c</fullName>
        <label>2.2mm - Zeiss</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>X2_8mm_AMO__c</fullName>
        <label>2.8mm - AMO</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>X2_8mm_Alcon__c</fullName>
        <label>2.8mm - Alcon</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>X2_8mm_B_L__c</fullName>
        <label>2.8mm - B&amp;L</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>X2_8mm_HumanOptics__c</fullName>
        <label>2.8mm - HumanOptics</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>X2_8mm_Others__c</fullName>
        <label>2.8mm - Others</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>X2_8mm_Zeiss__c</fullName>
        <label>2.8mm - Zeiss</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Zeiss__c</fullName>
        <description>IndiaSU field to collect Competitor Implantation product detail (No of IOLs)</description>
        <label>Zeiss</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Zeiss_acry_rate__c</fullName>
        <description>IndiaSU field to collect Competitor rate for Dr.</description>
        <label>Zeiss acry rate</label>
        <precision>10</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <label>Physician Visit</label>
    <listViews>
        <fullName>INDSUM_Physician_Visit</fullName>
        <filterScope>Queue</filterScope>
        <label>INDSUM</label>
        <queue>INDSUM</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>INDSU_Physician_Visit</fullName>
        <filterScope>Queue</filterScope>
        <label>INDSU</label>
        <queue>INDSU</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Last_14_Days</fullName>
        <columns>NAME</columns>
        <columns>OWNER.LAST_NAME</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>Activity_Date__c</columns>
        <columns>Session__c</columns>
        <columns>Hospital_Name__c</columns>
        <columns>Physician_Name__c</columns>
        <columns>Coach_CHN__c</columns>
        <columns>Planned_Call__c</columns>
        <columns>Status__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Activity_Date__c</field>
            <operation>equals</operation>
            <value>LAST_N_DAYS:14</value>
        </filters>
        <label>最近14天</label>
        <language>en_US</language>
        <sharedTo>
            <group>CHNSUFullAccess</group>
            <group>CHNSUGeneralManagerReportees</group>
            <group>CHNSUSales</group>
            <group>CHNSUSalesAdministrators</group>
            <group>CHNSUSalesManager</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Last_30_Days</fullName>
        <columns>NAME</columns>
        <columns>OWNER.LAST_NAME</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>Activity_Date__c</columns>
        <columns>Session__c</columns>
        <columns>Hospital_Name__c</columns>
        <columns>Physician_Name__c</columns>
        <columns>Coach_CHN__c</columns>
        <columns>Planned_Call__c</columns>
        <columns>Status__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Activity_Date__c</field>
            <operation>equals</operation>
            <value>LAST_N_DAYS:30</value>
        </filters>
        <label>最近30天</label>
        <language>en_US</language>
        <sharedTo>
            <group>CHNSUFullAccess</group>
            <group>CHNSUGeneralManagerReportees</group>
            <group>CHNSUSales</group>
            <group>CHNSUSalesAdministrators</group>
            <group>CHNSUSalesManager</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Last_3_Days_CHN</fullName>
        <columns>NAME</columns>
        <columns>OWNER.LAST_NAME</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>Activity_Date__c</columns>
        <columns>Session__c</columns>
        <columns>Hospital_Name__c</columns>
        <columns>Physician_Name__c</columns>
        <columns>Coach_CHN__c</columns>
        <columns>Planned_Call__c</columns>
        <columns>Status__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Activity_Date__c</field>
            <operation>equals</operation>
            <value>LAST_N_DAYS:3</value>
        </filters>
        <label>最近03天</label>
        <language>en_US</language>
        <sharedTo>
            <group>CHNSUFullAccess</group>
            <group>CHNSUGeneralManagerReportees</group>
            <group>CHNSUSales</group>
            <group>CHNSUSalesAdministrators</group>
            <group>CHNSUSalesManager</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Last_3_Days_Visit</fullName>
        <columns>NAME</columns>
        <columns>Physician_Name__c</columns>
        <columns>Activity_Date__c</columns>
        <columns>Status__c</columns>
        <columns>Planned_Call__c</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>OWNER.LAST_NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Activity_Date__c</field>
            <operation>equals</operation>
            <value>LAST_N_DAYS:3</value>
        </filters>
        <label>Last 3 Days Visit</label>
        <language>en_US</language>
        <sharedTo>
            <roleAndSubordinates>HKGSUAccountOwner</roleAndSubordinates>
            <roleAndSubordinates>INDSUAccountOwner</roleAndSubordinates>
            <roleAndSubordinates>KORSU_Account_Owner</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Last_3_Days_Visit_KOR_SOLTA</fullName>
        <columns>NAME</columns>
        <columns>OWNER.LAST_NAME</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>Activity_Date__c</columns>
        <columns>Session__c</columns>
        <columns>Hospital_Name__c</columns>
        <columns>Physician_Name__c</columns>
        <columns>Planned_Call__c</columns>
        <columns>Status__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Visit_Date__c</field>
            <operation>equals</operation>
            <value>LAST_N_DAYS:3</value>
        </filters>
        <label>Last 3 Days Visit KOR SOLTA</label>
        <language>en_US</language>
        <sharedTo>
            <group>KOR_SOLTA_Equ_Demo_Equ_Read_Team</group>
            <group>KOR_SOLTA_Equ_Demo_Equ_Read_Write_Team</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Last_7_Days</fullName>
        <columns>NAME</columns>
        <columns>OWNER.LAST_NAME</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>Activity_Date__c</columns>
        <columns>Session__c</columns>
        <columns>Hospital_Name__c</columns>
        <columns>Physician_Name__c</columns>
        <columns>Coach_CHN__c</columns>
        <columns>Planned_Call__c</columns>
        <columns>Status__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Activity_Date__c</field>
            <operation>equals</operation>
            <value>LAST_N_DAYS:7</value>
        </filters>
        <label>最近07天</label>
        <language>en_US</language>
        <sharedTo>
            <group>CHNSUFullAccess</group>
            <group>CHNSUGeneralManagerReportees</group>
            <group>CHNSUSales</group>
            <group>CHNSUSalesAdministrators</group>
            <group>CHNSUSalesManager</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Manager_Approval_View</fullName>
        <columns>NAME</columns>
        <columns>Activity_Date__c</columns>
        <columns>Hospital__c</columns>
        <columns>Contact__c</columns>
        <columns>End_time__c</columns>
        <columns>Status__c</columns>
        <columns>Approval_Stage__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Approval_Stage__c</field>
            <operation>equals</operation>
            <value>Submitted</value>
        </filters>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Physician_Visit__c.APACSU_Service_Engineer</value>
        </filters>
        <label>待审批拜访报告(Engineer)</label>
        <language>en_US</language>
        <sharedTo>
            <role>CHNSUSalesAdministrator</role>
            <role>CHNSU_Engineer</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Manager_Rejected_View</fullName>
        <columns>NAME</columns>
        <columns>Activity_Date__c</columns>
        <columns>Hospital__c</columns>
        <columns>Contact__c</columns>
        <columns>End_time__c</columns>
        <columns>Status__c</columns>
        <columns>Approval_Stage__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Approval_Stage__c</field>
            <operation>equals</operation>
            <value>Rejected</value>
        </filters>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Physician_Visit__c.APACSU_Service_Engineer</value>
        </filters>
        <label>被拒绝拜访报告(Engineer)</label>
        <language>en_US</language>
        <sharedTo>
            <role>CHNSUSalesAdministrator</role>
            <role>CHNSU_Engineer</role>
            <role>CHNSU_Engineer_Manager</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>This_Week_Calls</fullName>
        <columns>Hospital__c</columns>
        <columns>Hospital_Name__c</columns>
        <columns>Visit_Date__c</columns>
        <columns>Physician_Name__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Visit_Date__c</field>
            <operation>equals</operation>
            <value>THIS_WEEK</value>
        </filters>
        <label>This Week Calls</label>
        <language>en_US</language>
        <sharedTo>
            <group>KORSU_Sales</group>
            <group>KOR_SOLTA_Equ_Demo_Equ_Read_Team</group>
            <group>KOR_SOLTA_Equ_Demo_Equ_Read_Write_Team</group>
            <group>KOR_SOLTA_Group</group>
            <group>KOR_SOLTA_Read_Write_Team</group>
            <group>KOR_SOLTA_Team</group>
            <group>KOR_SOLTA_View_Group</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Today_Visits_KOR_SOLTA</fullName>
        <columns>Hospital__c</columns>
        <columns>OWNER.LAST_NAME</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>Activity_Date__c</columns>
        <columns>Session__c</columns>
        <columns>Physician_Name__c</columns>
        <columns>Hospital_Name__c</columns>
        <columns>Planned_Call__c</columns>
        <columns>Status__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Visit_Date__c</field>
            <operation>equals</operation>
            <value>TODAY</value>
        </filters>
        <label>Today Visits KOR SOLTA</label>
        <language>en_US</language>
        <sharedTo>
            <group>KOR_SOLTA_Equ_Demo_Equ_Read_Team</group>
            <group>KOR_SOLTA_Equ_Demo_Equ_Read_Write_Team</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Today_s_Visit</fullName>
        <columns>NAME</columns>
        <columns>Physician_Name__c</columns>
        <columns>Planned_Call__c</columns>
        <columns>Activity_Date__c</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>OWNER.LAST_NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Activity_Date__c</field>
            <operation>equals</operation>
            <value>TODAY</value>
        </filters>
        <filters>
            <field>Status__c</field>
            <operation>notEqual</operation>
            <value>Completed</value>
        </filters>
        <label>Today&apos;s Open Visits</label>
        <language>en_US</language>
        <sharedTo>
            <roleAndSubordinates>HKGSUAccountOwner</roleAndSubordinates>
            <roleAndSubordinates>INDSUAccountOwner</roleAndSubordinates>
            <roleAndSubordinates>KORSU_Account_Owner</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <nameField>
        <displayFormat>PV-{00000}</displayFormat>
        <label>Physician Visit Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Physician Visit</pluralLabel>
    <recordTypes>
        <fullName>APACSU_Sales_Planned</fullName>
        <active>true</active>
        <description>APACSU physician visit record type for planned sales visit</description>
        <label>APACSU Sales Planned</label>
    </recordTypes>
    <recordTypes>
        <fullName>APACSU_Sales_Unplanned</fullName>
        <active>true</active>
        <description>APACSU physician visit record type for unplanned sales visit</description>
        <label>APACSU Sales Unplanned</label>
    </recordTypes>
    <recordTypes>
        <fullName>APACSU_Service_Engineer</fullName>
        <active>true</active>
        <description>APACSU physician visit record type for Service Engineer</description>
        <label>APACSU Service Engineer</label>
    </recordTypes>
    <recordTypes>
        <fullName>APACSU_Service_Rep</fullName>
        <active>true</active>
        <description>APACSU physician visit record type for Service Rep</description>
        <label>APACSU Technical Service</label>
    </recordTypes>
    <recordTypes>
        <fullName>INDSU_Sales_Planned</fullName>
        <active>true</active>
        <description>India SU physician visit record type for planned sales visit</description>
        <label>INDSU Sales Planned</label>
    </recordTypes>
    <recordTypes>
        <fullName>INDSU_Sales_Unplanned</fullName>
        <active>true</active>
        <description>India SU physician visit record type for unplanned sales visit</description>
        <label>INDSU Sales Unplanned</label>
    </recordTypes>
    <recordTypes>
        <fullName>INDSU_Service_Planned</fullName>
        <active>true</active>
        <description>India SU physician visit record type for planned service visit</description>
        <label>INDSU Service Planned</label>
    </recordTypes>
    <recordTypes>
        <fullName>INDSU_Service_Rep_Planned</fullName>
        <active>true</active>
        <description>India SU Physician Visit record type for planned service visit with Service Call Objective (only for IND SU Service Reps)</description>
        <label>INDSU Service Rep Planned</label>
    </recordTypes>
    <recordTypes>
        <fullName>INDSU_Service_Unplanned</fullName>
        <active>true</active>
        <description>India SU physician visit record type for unplanned service visit</description>
        <label>INDSU Service Unplanned</label>
    </recordTypes>
    <recordTypes>
        <fullName>KORSOLTA_Sales_Planned</fullName>
        <active>true</active>
        <description>KORSOLTA SU physician visit record type for planned Clinic visit</description>
        <label>KORSOLTA Sales Planned</label>
    </recordTypes>
    <recordTypes>
        <fullName>KORSOLTA_Sales_UnPlanned</fullName>
        <active>true</active>
        <description>KORSOLTA SU physician visit record type for Unplanned Clinic visit</description>
        <label>KORSOLTA Sales UnPlanned</label>
    </recordTypes>
    <recordTypes>
        <fullName>KORSOLTA_Service_Planned</fullName>
        <active>true</active>
        <description>KORSOLTA SU physician visit record type for planned service visit</description>
        <label>KORSOLTA Service Planned</label>
    </recordTypes>
    <recordTypes>
        <fullName>KORSOLTA_Service_UnPlanned</fullName>
        <active>true</active>
        <description>KORSOLTA SU physician visit record type for Unplanned Service visit</description>
        <label>KORSOLTA Service UnPlanned</label>
    </recordTypes>
    <recordTypes>
        <fullName>THASU_Sales_Planned</fullName>
        <active>true</active>
        <description>Recordtype for Sales Reps and Managers , Administrators</description>
        <label>THASU Sales Planned</label>
    </recordTypes>
    <recordTypes>
        <fullName>THASU_Sales_Unplanned</fullName>
        <active>true</active>
        <description>Unplanned recordtrype for Sales Reps and Managers</description>
        <label>THASU Sales Unplanned</label>
    </recordTypes>
    <recordTypes>
        <fullName>THASU_Service_Planned</fullName>
        <active>true</active>
        <description>Service Reps and Mangers for planned visits</description>
        <label>THASU Service Planned</label>
    </recordTypes>
    <recordTypes>
        <fullName>THASU_Service_Unplanned</fullName>
        <active>true</active>
        <description>For Unplanned Calls for Service Reps and Managers</description>
        <label>THASU Service Unplanned</label>
    </recordTypes>
    <sharingModel>Private</sharingModel>
    <validationRules>
        <fullName>APACSU_Activity_Date_check</fullName>
        <active>true</active>
        <description>APACSU validation rule to allow the users to be able to report physician visit  within past 15 days (including today but not later than today)</description>
        <errorConditionFormula>OR($RecordType.Name = &quot;APACSU Sales Unplanned&quot;,$RecordType.Name = &quot;INDSU Sales Unplanned&quot;)
&amp;&amp;
( Activity_Date__c &lt; TODAY() -15 || Activity_Date__c &gt; TODAY() )</errorConditionFormula>
        <errorDisplayField>Activity_Date__c</errorDisplayField>
        <errorMessage>You cannot create a Physician Visit Activity Date in the future or any date earlier than past 15 days.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>APACSU_Call_Objective_Other_Value</fullName>
        <active>true</active>
        <description>Enter a value if  &quot;Other&quot; is selected as Call Objective</description>
        <errorConditionFormula>AND(
 CONTAINS(&apos;INDSU&apos;, $Profile.Name),
(TEXT( Call_Ojective_CHN__c ) = &quot;Others&quot;),(Others_Please_Enter__c=NULL)
)</errorConditionFormula>
        <errorDisplayField>Others_Please_Enter__c</errorDisplayField>
        <errorMessage>Please Enter an Objective for &quot;Other&quot;</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>APACSU_Engineer_Service_Products_Limit</fullName>
        <active>false</active>
        <errorConditionFormula>OR(
AND( Num_of_Service_Products__c &gt;5, $RecordType.Name =&apos;APACSU Service Engineer&apos;),
AND(Num_of_Service_Products__c &gt;1,$RecordType.Name =&apos;APACSU Technical Service&apos;)
)</errorConditionFormula>
        <errorDisplayField>X1_8mm_Alcon__c</errorDisplayField>
        <errorMessage>You can&apos;t add too many service products.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>APACSU_Hours_in_Surgery_is_mandatory</fullName>
        <active>true</active>
        <description>Hours in Surgery is mandatory if Call Type is OT Visit.</description>
        <errorConditionFormula>AND( ISPICKVAL( Call_Type__c , &quot;OT Visit&quot;) ,OR(ISPICKVAL( Hours_in_Surgery__c, &quot;&quot;),ISPICKVAL ( Hours_in_Surgery__c , &quot;0.0&quot;)), OR($RecordType.Name =&apos;INDSU Sales Unplanned&apos;,$RecordType.Name =&apos;APACSU Sales Unplanned&apos;,$RecordType.Name =&apos;APACSU Sales Planned&apos;,$RecordType.Name =&apos;INDSU Service Planned&apos;))</errorConditionFormula>
        <errorDisplayField>Hours_in_Surgery__c</errorDisplayField>
        <errorMessage>Please Select Value for Hours in Surgery.</errorMessage>
    </validationRules>
</CustomObject>